[project]
name = "twdensity"
version = "0.1.0"
description = "Update TaskWarrior task urgency based on the density of task dues in time"
authors = [
    {name = "Federico Simonetta", email = "22996003+00sapo@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0"

[project.scripts]
twdensity = "twdensity.cli:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
